--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,7 +117,7 @@ blockquote {
   .address {
     margin-bottom: 5px;
     margin-top: 5px;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
 
     p {
       display: inline-block;
@@ -136,7 +136,7 @@ blockquote {
 
 @media (min-width: 576px) {
   .profile {
-    width: 30%;
+    width: 20%;
 
     .address {
       p {
